<resources>
    <string name="app_name">Random User</string>
    <string name="fetching_a_profile">Fetching a profile…</string>
    <string name="fetch_profile_failed">Could not fetch profile</string>
    <string name="error_title">An error has occurred</string>
    <string name="not_online">Offline</string>
    <string name="not_online_description">Please ensure that you have a stable connection to the internet as the app requires it to retrieve user profiles from the web.\nYou may click the button below to restart the application.</string>
    <string name="error_unspecified">Unspecified error</string>
    <string name="error_unspecified_description">Due to an unspecified error the app can not continue functioning.\nIf this issue persists consider filing a bug report.\n\nYou may click the button below to restart the app.</string>
    <string name="restart_application">Restart application</string>
    <string name="hello">hello</string>
    <string name="api_error">API Error</string>
    <string name="api_error_descrption">An error has occurred with the api, please try again later.\nClick the button below to start the application.</string>
    <string name="internal_error">Internal Error</string>
    <string name="internal_error_description">An internal error has occurred.\nYou may restart the app by clicking the button below.</string>
    <string name="app_description">This app was created for the subject Application development for mobile devices</string>
    <string name="version" formatted="true">Version: %1$s </string>
    <string name="nationality">Nationality:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="from_email">From: %1$s</string>
    <string name="easter_egg">Easter Egg</string>
    <string name="easter_egg_description">Congratulations! You found the Easter egg.\n\n\n\nYou can now restart the app.</string>
    <string name="location">Location:</string>
    <string name="no_emails">You have not received any emails</string>
    <string name="history">History</string>
    <string name="history_empty">History is empty</string>
    <string name="user_deleted">User has been deleted</string>
    <string name="emails_no_save_warning">E-Mails expire after 10 minutes and are not saved.</string>
    <string name="use_this_user">Use this user</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
</resources>