<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_app_icon"
            android:src="@drawable/ic_launcher_foreground"
            android:background="@drawable/round_background"
            android:layout_width="200dp"
            android:layout_height="200dp"/>

        <TextView
            android:layout_marginTop="18dp"
            android:textSize="28sp"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/app_description"
            android:maxWidth="300dp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:lineSpacingMultiplier="1.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:id="@+id/tv_version"
            android:layout_marginTop="8dp"
            android:text="@string/version"
            tools:text="Version: 1.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</FrameLayout>